@@ -2,6 +2,8 @@ Revision 4.2.2
 --------------
 
 - SNMPv2-SMI.ObjectType.__repr__() fixed to do a repr() on its components.
+- SNMPv2-SMI.MibNode class moved to a separate module, all MibNode-based
+  objects, once built into a tree, will carry an embedded label symbol.
 - Exlicit repr() calls replaced with '%r'
 - Fix to error processing at GETNEXT & GETBULK apps response handlers.
 
